syntax = "proto3";

package api.kessel.inventory.v1beta1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import public "kessel/inventory/v1beta1/rhel_host.proto";

option go_package = "api/kessel/inventory/v1beta1;v1beta1";
option java_multiple_files = true;
option java_package = "api.kessel.inventory.v1beta1";

message CreateRhelHostRequest {
  // The Rhel Host to create in Kessel Asset Inventory
  RhelHost host = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateRhelHostResponse {
  // The Rhel Host created in Kessel Asset Inventory
  RhelHost host = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateRhelHostRequest {
  // A resource instance using the format:
  // \"<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\"
  string resource = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
  // The Rhel host to update
  RhelHost host = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateRhelHostResponse {}

message DeleteRhelHostRequest {
  // A resource instance using the format:
  // \"<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\"
  string resource = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteRhelHostResponse {}

service HostsService {
  rpc CreateRhelHost(CreateRhelHostRequest) returns (CreateRhelHostResponse) {
    option (google.api.http) = {
      post : "/api/inventory/v1beta1/hosts"
      body : "host"
    };
  };

  rpc UpdateRhelHost(UpdateRhelHostRequest) returns (UpdateRhelHostResponse) {
    option (google.api.http) = {
      put : "/api/inventory/v1beta1/hosts/{resource}"
      body : "host"
    };
  };

  rpc DeleteRhelHost(DeleteRhelHostRequest) returns (DeleteRhelHostResponse) {
    option (google.api.http) = {
      delete : "/api/inventory/v1beta1/hosts/{resource}"
    };
  };
}
